k8s/namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: demo-turbo-instana-concert
  labels:
    name: demo-turbo-instana-concert
    app.kubernetes.io/name: demo-turbo-instana-concert
    app.kubernetes.io/component: observability-demo
    security.policy.io/isolation: demo-environment
